# Quark

./: .gitignore  CMakeLists.txt
enc_temp_folder/1b75e9157d2aa2aa158f9e47b9aaa94/: main.cpp
src/: main.cpp  quark_app.cpp  quark_app.h  quark_client.cpp  quark_client.h
